package main.java.client.gui.autenticazione;

import main.java.client.gui.TemplateGUI;

import javax.swing.*;

public class ModificaGUI extends TemplateGUI {
    JFrame frame;
    public ModificaGUI(JFrame frame) {
        super(frame);
        this.frame = frame;
    }
}
