@startuml Client_Class_Autenticazione
skinparam classAttributeIconSize 0
skinparam linetype ortho

class TemplateGUI <<boundary>> {
  # frame: JFrame
  # pannello: JPanel
  # visualizzaProfilo: JButton
  + TemplateGUI(frame: JFrame)
}

class LoginGUI <<boundary>> {
  - campoEmail: JTextField
  - campoPassword: JPasswordField
  + LoginGUI(frame: JFrame, utenteService: UtenteService)
}

class RegistrazioneGUI <<boundary>> {
  - campoNome: JTextField
  - campoCognome: JTextField
  - campoCitta: JTextField
  - campoNazione: JTextField
  - campoEmail: JTextField
  - campoPassword: JPasswordField
  - radioSi: JRadioButton
  - radioNo: JRadioButton
  + RegistrazioneGUI(frame: JFrame, utenteService: UtenteService)
}

class ModificaGUI <<boundary>> {
  + ModificaGUI(frame: JFrame)
}

class UtenteService <<control>> {
}

LoginGUI --|> TemplateGUI
RegistrazioneGUI --|> TemplateGUI
ModificaGUI --|> TemplateGUI

LoginGUI "1" --> "1" UtenteService
RegistrazioneGUI "1" --> "1" UtenteService

LoginGUI ..> RegistrazioneGUI : naviga verso

@enduml